data-app/objects/hvac__dlm/fields/Airflow__c.field-meta.xml
<CustomField>
    <fullName>Airflow__c</fullName>
    <label>Airflow</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Airflow</labelOverride>
        <masterLabel>Airflow</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>