data-app/objects/hvac__dlm/fields/DuctPressure__c.field-meta.xml
<CustomField>
    <fullName>DuctPressure__c</fullName>
    <label>DuctPressure</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>DuctPressure</labelOverride>
        <masterLabel>DuctPressure</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>