data-app/objects/hvac__dlm/fields/FilterDifferential__c.field-meta.xml
<CustomField>
    <fullName>FilterDifferential__c</fullName>
    <label>FilterDifferential</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>FilterDifferential</labelOverride>
        <masterLabel>FilterDifferential</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>