data-app/objects/hvac__dlm/fields/KQ_id__c.field-meta.xml
<CustomField>
    <fullName>KQ_id__c</fullName>
    <label>Key Qualifier id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier id</labelOverride>
        <masterLabel>Key Qualifier id</masterLabel>
        <refAttrDeveloperName>KQ_id</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>