data-app/objects/hvac__dlm/fields/RefrigerantLevels__c.field-meta.xml
<CustomField>
    <fullName>RefrigerantLevels__c</fullName>
    <label>RefrigerantLevels</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>RefrigerantLevels</labelOverride>
        <masterLabel>RefrigerantLevels</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>