data-app/objects/hvac__dlm/fields/TemperatureAccuracy__c.field-meta.xml
<CustomField>
    <fullName>TemperatureAccuracy__c</fullName>
    <label>TemperatureAccuracy</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TemperatureAccuracy</labelOverride>
        <masterLabel>TemperatureAccuracy</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>